decervoWebsite and UW Nexus Project Homepage

--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
             </div>
 			<div class="col-md-8 projectSector">
 				<div class="projectItem">
+					<img src="../img/decervoWebsite2.PNG" alt="decervoWebsite" class="decervoWeb">
+                  
+					<h1 class = "projectTitle websiteTitle">deCervo LLC.</h1>
+					<a class = "moreBtn websiteBtn" href="#">MORE</a>
+                   
+				</div>
+				<div class="projectItem">
+					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
+					<h1 class = "projectTitle nexusTitle">UW NEXUS</h1>
+					<a class = "moreBtn nexusBtn" href="#">MORE</a>
+				</div>
+				<!--<div class="projectItem">
 					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
 					<h1 class = "projectTitle">UW NEXUS</h1>
 					<a class = "moreBtn" href="#">MORE</a>
@@ -68,17 +80,7 @@
 					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
 					<h1 class = "projectTitle">UW NEXUS</h1>
 					<a class = "moreBtn" href="#">MORE</a>
-				</div>
-				<div class="projectItem">
-					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
-					<h1 class = "projectTitle">UW NEXUS</h1>
-					<a class = "moreBtn" href="#">MORE</a>
-				</div>
-				<div class="projectItem">
-					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
-					<h1 class = "projectTitle">UW NEXUS</h1>
-					<a class = "moreBtn" href="#">MORE</a>
-				</div>
+				</div>-->
 			</div>
 			<div class="col-md-8 contactSector">
 
