--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                      <li class="navigation_item">
                         <a href="#about">ABOUT</a>
                      </li>
-                     <li class="navigation_item" href="#">
-                        PROJECTS		
+                     <li class="navigation_item">
+                        <a href="#projects">PROJECTS</a>		
                      </li>
                      <li class="navigation_item" href="#">
                         CONTACT
@@ -41,12 +41,34 @@
                <h1 class = "titleName">Jordan Freitas</h1>
             </div>
             <div class="col-md-8 aboutSector">
-               <h1 >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis id rutrum ligula. Donec condimentum diam ligula, vel mattis lectus dictum vitae. Mauris tempus lectus eleifend tortor imperdiet iaculis. Donec tempus tempor nunc et fermentum. Pellentesque vulputate, ipsum eu pellentesque hendrerit, erat risus tincidunt dui, vel blandit odio neque at arcu. Pellentesque bibendum, sapien vitae suscipit semper, ex nisl blandit neque, et fermentum orci diam ut nunc. Praesent eu nunc finibus, gravida nibh quis, imperdiet sem. Sed tincidunt tellus ac ante pellentesque, ac tempor mi dictum.</h1>
+                <div class="container">
+               <h1 >I am Jordan Freitas, currently a Junior at the University of Washington 
+                   pursuing a degree in Informatics and a minor in Entrepreneurship.</h1>
+               <h1>Born and raised in Seattle, my mission is to have technology innovation thrive in our society.  </h1>
+               <img src="../img/spaceNeedle.svg" alt="Space Needle" class="spaceNeedle">
+               <h1> I currently work at deCervo, a groundbreaking company working toward measuring and improving performance-relevant cognition.</h1>
+               <img src="../img/decervo.svg" alt="decervo" class="decervoLogo">
+                <h1> Technology Interests</h1>
+               <div class="col-md-4 interests">blagh
+                   <img src="../img/mesh.svg" alt="Mesh Processing" class="interestIcon">
+               </div>
+               <div class="col-md-4 interests">blagh</div>
+               <div class="col-md-4 interests">blagh</div>
+                <h1> Research Interests</h1>
+               <div class="col-md-4 interests">blagh</div>
+               <div class="col-md-4 interests">blagh</div>
+               <div class="col-md-4 interests">blagh</div>
+                <h1> Personal Interests</h1>
+               <div class="col-md-4 interests">blagh</div>
+               <div class="col-md-4 interests">blagh</div>
+               <div class="col-md-4 interests">blagh</div>
+
+
+           </div>
             </div>
-			<div class="col-md-8 projectSector">
+			<div id = "projects" class="col-md-8 projectSector">
 				<div class="projectItem">
 					<img src="../img/decervoWebsite2.PNG" alt="decervoWebsite" class="decervoWeb">
-                  
 					<h1 class = "projectTitle websiteTitle">deCervo LLC.</h1>
 					<a class = "moreBtn websiteBtn" href="#">MORE</a>
                    
@@ -56,31 +78,31 @@
 					<h1 class = "projectTitle nexusTitle">UW NEXUS</h1>
 					<a class = "moreBtn nexusBtn" href="#">MORE</a>
 				</div>
-				<!--<div class="projectItem">
-					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
-					<h1 class = "projectTitle">UW NEXUS</h1>
-					<a class = "moreBtn" href="#">MORE</a>
+				<div class="projectItem">
+					<img src="../img/stockUp.PNG" alt="stockUp" class="stockUp">
+					<h1 class = "projectTitle stockTitle">STOCK UP</h1>
+					<a class = "moreBtn stockBtn" href="#">MORE</a>
 				</div>
 				<div class="projectItem">
-					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
-					<h1 class = "projectTitle">UW NEXUS</h1>
-					<a class = "moreBtn" href="#">MORE</a>
+					<img src="../img/loop.PNG" alt="loopOS" class="loop">
+					<h1 class = "projectTitle loopTitle"></h1>
+					<a class = "moreBtn loopBtn" href="#">MORE</a>
 				</div>
 				<div class="projectItem">
-					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
-					<h1 class = "projectTitle">UW NEXUS</h1>
-					<a class = "moreBtn" href="#">MORE</a>
+					<img src="../img/info.svg" alt="infographic" class="info">
+					<h1 class = "projectTitle infoTitle">INFOGRAPHIC</h1>
+					<a class = "moreBtn infoBtn" href="#">MORE</a>
 				</div>
 				<div class="projectItem">
-					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
-					<h1 class = "projectTitle">UW NEXUS</h1>
-					<a class = "moreBtn" href="#">MORE</a>
+					<img src="../img/chowbox.svg" alt="ChowBox" class="chow">
+					<!--<h1 class = "projectTitle chowTitle"></h1>
+					<a class = "moreBtn chowBtn" href="#">MORE</a>-->
 				</div>
 				<div class="projectItem">
-					<img src="../img/nexus.svg" alt="UWNexus" class="nexus">
-					<h1 class = "projectTitle">UW NEXUS</h1>
-					<a class = "moreBtn" href="#">MORE</a>
-				</div>-->
+					<img src="../img/musaic.PNG" alt="musaic" class="musaic">
+					<h1 class = "projectTitle musaicTitle">Musaic</h1>
+					<a class = "moreBtn musaicBtn" href="#">MORE</a>
+				</div>
 			</div>
 			<div class="col-md-8 contactSector">
 
