--- a/index.html
+++ b/index.html
@@ -50,12 +50,20 @@
                <img src="../img/decervo.svg" alt="decervo" class="decervoLogo">
                 <h1> Technology Interests</h1>
                <div class="col-md-4 interests">blagh
-                   <img src="../img/mesh.svg" alt="Mesh Processing" class="interestIcon">
+                   <img src="../img/ux.svg" alt="UX Design" class="interestIcon">
                </div>
-               <div class="col-md-4 interests">blagh</div>
-               <div class="col-md-4 interests">blagh</div>
+               <div class="col-md-4 interests">
+                   <img src="../img/web.svg" alt="Web Applications" class="interestIcon">
+                   blagh
+                   </div>
+               <div class="col-md-4 interests">
+                   <img src="../img/phone.svg" alt="Web Applications" class="interestIcon">
+                   blagh
+                   </div>
                 <h1> Research Interests</h1>
-               <div class="col-md-4 interests">blagh</div>
+               <div class="col-md-4 interests">
+                   <img src="../img/mesh.svg" alt="Mesh Processing" class="interestIcon">                   
+                   blagh</div>
                <div class="col-md-4 interests">blagh</div>
                <div class="col-md-4 interests">blagh</div>
                 <h1> Personal Interests</h1>
