about sectino clean up

--- a/index.html
+++ b/index.html
@@ -42,34 +42,47 @@
             </div>
             <div class="col-md-8 aboutSector">
                 <div class="container">
-               <h1 >I am Jordan Freitas, currently a Junior at the University of Washington 
-                   pursuing a degree in Informatics and a minor in Entrepreneurship.</h1>
-               <h1>Born and raised in Seattle, my mission is to have technology innovation thrive in our society.  </h1>
-               <img src="../img/spaceNeedle.svg" alt="Space Needle" class="spaceNeedle">
-               <h1> I currently work at deCervo, a groundbreaking company working toward measuring and improving performance-relevant cognition.</h1>
-               <img src="../img/decervo.svg" alt="decervo" class="decervoLogo">
-                <h1> Technology Interests</h1>
-               <div class="col-md-4 interests">blagh
+                    <h1 class = "aboutIntro">People. Innovation. Code.</h1>
+               <!--<h1 >I am Jordan Freitas, currently a Junior at the University of Washington 
+                   pursuing a degree in Informatics and a minor in Entrepreneurship.</h1>-->
+                   <div class="mission">
+                         <img src="../img/spaceNeedle.svg" alt="Space Needle" class=" col-md-2 spaceNeedle">
+               <h1 class = "col-md-10 textNeedle" >Born and raised in Seattle, My mission is to have technology innovation thrive in our society.  </h1>
+         </div>
+               <!--<h1> I currently work at deCervo, a groundbreaking company working toward measuring and improving performance-relevant cognition.</h1>
+               <img src="../img/decervo.svg" alt="decervo" class="decervoLogo">-->
+                <!--<h1 class = "aboutTitle" >Technology</h1>-->
+               <div class="col-md-4 interests">
                    <img src="../img/ux.svg" alt="UX Design" class="interestIcon">
                </div>
                <div class="col-md-4 interests">
                    <img src="../img/web.svg" alt="Web Applications" class="interestIcon">
-                   blagh
+                   
                    </div>
                <div class="col-md-4 interests">
                    <img src="../img/phone.svg" alt="Web Applications" class="interestIcon">
-                   blagh
+                   
                    </div>
-                <h1> Research Interests</h1>
-               <div class="col-md-4 interests">
+                <h1 class = "aboutTitle">Research</h1>
+               <div class="col-md-3 interests">
                    <img src="../img/mesh.svg" alt="Mesh Processing" class="interestIcon">                   
-                   blagh</div>
-               <div class="col-md-4 interests">blagh</div>
-               <div class="col-md-4 interests">blagh</div>
-                <h1> Personal Interests</h1>
-               <div class="col-md-4 interests">blagh</div>
-               <div class="col-md-4 interests">blagh</div>
-               <div class="col-md-4 interests">blagh</div>
+                   </div>
+               <div class="col-md-3 interests">
+                   <img src="../img/brain.svg" alt="EEG" class="interestIcon">                   
+</div>
+               <div class="col-md-3 interests">
+                    <img src="../img/lightBulb.svg" alt="EEG" class="interestIcon">                   
+</div>
+<div class="col-md-3 interests">
+                    <img src="../img/nootropic.svg" alt="EEG" class="interestIcon">                   
+</div>
+                <h1 class = "aboutTitle"> Personal </h1>
+                <div class="col-md-2 interests">
+                   <img src="../img/mesh.svg" alt="Mesh Processing" class="interestIcon">                   
+                   </div>
+               <div class="col-md-4 interests"></div>
+               <div class="col-md-4 interests"></div>
+               <div class="col-md-4 interests"></div>
 
 
            </div>
