Stock UP Section Completed

--- a/loopOS.html
+++ b/loopOS.html
@@ -22,13 +22,13 @@
                <div class="homeNav">
                   <ul class = "navigation_list">
                      <li class="navigation_item-toggle">
-                        <a href="#homepage">ChowBox</a>
+                        <a href="#homepage">Loop OS</a>
                      </li>
                      <li class="navigation_item">
-                        <a href="#about">WEBSITE</a>
+                        <a href="#about">MISSION</a>
                      </li>
                      <li class="navigation_item">
-                        <a href="#projects">MOBILE APP</a>		
+                        <a href="#projects">SPRINTS</a>		
                      </li>
                      <li class="navigation_item" href="#">
                         OTHER
@@ -36,7 +36,7 @@
                   </ul>
                </div>
             </nav>
-            <div class="col-md-8 decervoHomeSector">
+            <div class="col-md-8 loopOSHomeSector">
                <!--<h1 class = "title">deCervo</h1>-->
                <!--<h1 class = "titleName">Role: UI Designer, UX Designer, Mobile App Developer</h1>-->
             </div>
@@ -44,19 +44,13 @@
             <div class="col-md-8 decervoAboutSector">
                 <div class="container">
                     <div class="decervoText">
-                    <h1>Role: UI Designer, UX Designer, Mobile App Developer</h1>
-                    <h1>deCervo is a New York, Colombia based company focused .  My work and involvement with the company began in the Spring 2016.  From my extensive background in baseball, knowledge of code/engineering, and user experience I have been able to redesign and assist in iteration of their mobile application and have most recently designed, directed, and implemented deCervo's entire website overhaul.    
-                    <br>
-                    Due to the current size of the company, my days were spent quickly learning, constantly adapting, and tailoring my skills for the ultimate goal of the company.  Endless hours of self-teaching, debugging, and testing was core as I often was the sole designer/developer leading to many iterations of trial-and-error that comes with starting a company.
-                    <br>
-                    In addition to the hard skills(C#, Javascript, HTML, CSS, Prototyping, Wireframing, Developing, Device Testing etc.) and programs used(Unity, Adobe Products, Tableau, Axure etc.), my experience has offered countless soft skills including interviewing, hiring, directing, and managing developers, working in sprint development cycles, and overall communication and interaction in a business/high-level/fast-moving environment.  </h1>
-                    </div>
-                    <h1>Website Overhaul</h1>
-                    <h1>Lay the foundations regarding overall theme, ideas, and necessities of the website</h1>
-                    <p>This step involves lots of collaboration of taking their goals of this website and putting them into terms of implementation.  As a company, 
-were able to figure out what we wanted out of making this website, what features we want to showcase, and the overall feel we
-wanted users to have when coming to this website.  A lot of this involved taking the company ideas and putting them down into a 
-virtual form as well as using this website primarily as a marketing tool.</p>
+                         <h1>3Months. 3People. 1Goal.</h1>
+                         <h1>Create a Mobile Operating System From Scratch</h1>
+                         <h1>How It Happened</h1>
+
+                    <h1>Sprint 1(Each sprint = 2 weeks)</h1>
+                    <h1>Theme. Values. Surveys. Interviews.</h1>
+                    <p>Quick successions of research, brainstorming, and collaboration were done to quickly fathom which focus points to build upon.</p>
                      <img src="../img//website/graph.png" alt="deCervo Goals" class="decervoImg">  
                      <h1>Search, Analyze, and Compare possible design layouts for the website</h1>
                      <p>Here I took my companys' main ideas, their logos, their color schemes and mixed and match with differennt template
@@ -122,7 +116,7 @@ on mobile as well as large desktop screens.  Links between each of the pages are
                             -Those not using the data, but people who will be analyzing the data
                        </p>
                         <img src="../img//decervoApp/data.png" alt="Profile Data" class="decervoImg">   
-
+<iframe src="https://drive.google.com/file/d/0BwZrUtGyvIaDMjdtUFkta2RENHc/preview" width="100%" height="100%"></iframe>
  </div>
   </div>
          <!--<script src="./assets/js/vendor.min.js?v=1.8"></script>
