--- a/loopOS.html
+++ b/loopOS.html
@@ -31,7 +31,7 @@
                         <a href="#projects">SPRINTS</a>		
                      </li>
                      <li class="navigation_item" href="#">
-                        OTHER
+                        DECK
                      </li>
                   </ul>
                </div>
@@ -41,82 +41,43 @@
                <!--<h1 class = "titleName">Role: UI Designer, UX Designer, Mobile App Developer</h1>-->
             </div>
 
-            <div class="col-md-8 decervoAboutSector">
+            <div class="col-md-8 loopAboutSector">
                 <div class="container">
-                    <div class="decervoText">
-                         <h1>3Months. 3People. 1Goal.</h1>
-                         <h1>Create a Mobile Operating System From Scratch</h1>
-                         <h1>How It Happened</h1>
+                    <div class="loopText">
+                         <h1 class = "loopIntro" >3Months. 3People. 1Goal.</h1>
+                         <h1 class = "loopIntro" >Design a Mobile Operating System</h1>
 
-                    <h1>Sprint 1(Each sprint = 2 weeks)</h1>
-                    <h1>Theme. Values. Surveys. Interviews.</h1>
-                    <p>Quick successions of research, brainstorming, and collaboration were done to quickly fathom which focus points to build upon.</p>
-                     <img src="../img//website/graph.png" alt="deCervo Goals" class="decervoImg">  
-                     <h1>Search, Analyze, and Compare possible design layouts for the website</h1>
-                     <p>Here I took my companys' main ideas, their logos, their color schemes and mixed and match with differennt template
- styles and designs. This step showcased the design process and thinking of taking what works, is clean, and effective 
-and pushing this in line with the goals of deCervo.</p>
-                     <img src="../img//website/design.png" alt="Desgn Options" class="decervoImg">  
-                     <h1>Map User Experience Flow</h1>
-                     <p>User Experience flow involved lots of talking, brainstorming, and drawing of the user experience side of the website.
-The goal was to have fluidity throughout.  Have each step lead to the next logical step, each click lead to something
-useful for the user.  During this step we were able to fill in the gaps that were uncovered in the intial collection of 
-ideas and themes for the website.</p>  
-                     <img src="../img//website/flowchart.png" alt="uHIT Mobile Flowchart" class="decervoImg">
-                     <h1>Wireframe using the design templates and flow created in previous steps</h1>                 
-                     <p>Wireframing was by far the most complex part of this design process and implementation of the website.  These wireframes were
-changed, moved, added and worked upon constantly!!!  As seen below
-the mockups contained every aspect the website needed, from logos, to informational sections, to slideshow functionality.
-These were first done using illustrator(not a Mac user so no sketch...yet!), and later pushed into Axure which is a high-fidelity prototyping tool. </p>
-                     <img src="../img//website/HTML.png" alt="HTML Snip" class="decervoImg">
-                     <h1>Create HTML template and framework</h1>   
-                     <p>The main goal behind this step is to provide the developers a base template that they can work off of when implementing the site.
-This puts together the frameworks, theme classes, and simple layout.  This helped expedite the process once handed off to the 
-developers.</p>
-                     <img src="../img//website/prototype.png" alt="Prototype" class="decervoImg">
-                     <h1>Interview, hire, and direct web developers to assist in implementation</h1>   
-                     <p>The first part of this was finding a web developers that both had the skills to implement my designs from the wireframes and the 
-design sense to take what I invisioned to code.  This brought my wireframes to life, adding styling, movements, slideshows and other
-vital functionality that turned the simple frames to a complete website.  Consistent scheduling, check-ins, and code checking were vital for me to get the website how I envisioned.</p>
-                      <img src="../img//website/virtual.png" alt="Web Screen" class="decervoImg"> 
-                      <h1>Set up payment methods, subscription methods, and user blog sections</h1>  
-                      <p>This was the most vigourous step of this process and we began to implement third party resources into our website to increase
-functionality.  These included ways to include payment methods(stripe), ways to subscrive to email lists(mailchimp), and 
-creating sections for blogs and similar discussion forums(wordpress as the base, with forum aspects).</p>
-                     <img src="../img//website/mailchimp.png" alt="Mailchimp" class="decervoImg">   
-                     <h1>Ensure full responsiveness of site and insert needed linkage</h1>
-                     <p>This brought the website 
-functionality to the user side.  This step is in charge of responsiveness of the site as a whole so that each part and section works well
-on mobile as well as large desktop screens.  Links between each of the pages are made in response to the user flow.</p>
-                      <img src="../img//website/blog.png" alt="Blog" class="decervoImg">   
+                    <h1>SPRINT 1</h1>
+                    <h1>Themes. Values. Surveys. Interviews.</h1>
+                    
+                    <div class="imgText">
+                     <img src="../img//loop/themes.png" alt="Design Themes" class="decervoImg"> 
+                      <p class = "textOver">Quick successions of research, brainstorming, and collaboration were done to quickly fathom which focus points to build upon.</p>
+                     </img> 
+                     </div>
 
-                       <h1>Mobile App</h1>
-                       <h1>Reconstruct, Brainstorm, Ideate</h1>
-\                       <h1>Rearch App to Marketable Product</h1>
-                       <img src="../img//decervoApp/old.png" alt="Research App" class="decervoImg"> 
-                       <h1>Wireframe and User Flow</h1>
-                        <img src="../img//decervoApp/wireframes.png" alt="App Wireframes" class="decervoImg"> 
-
-                       <h1>Test, Debug, Add Features</h1>
-                        <img src="../img//decervoApp/unity.png" alt="Implementation" class="decervoImg">   
-
-                       <h1>3d Unity Development</h1>
-                       <img src="../img//decervoApp/new.png" alt="New Stadium" class="decervoImg">   
-
-                       <h1>Focus on Device Compatibility...iOS, Android, Tablet, Desktop, virtual</h1>
-                       <img src="../img//decervoApp/overview.png" alt="Research App" class="decervoImg">   
-
-                       <h1>Iterate with Users</h1>
-                       <p>Users from all fields
-                           Baseball Players
-                            -Main Audience targeting College and High School Players and Teams
-                            College Age Students
-                            -Those utilizing the app for the possiblities of coginitive performance
-                            Coaches/Retired People
-                            -Those not using the data, but people who will be analyzing the data
-                       </p>
-                        <img src="../img//decervoApp/data.png" alt="Profile Data" class="decervoImg">   
-<iframe src="https://drive.google.com/file/d/0BwZrUtGyvIaDMjdtUFkta2RENHc/preview" width="100%" height="100%"></iframe>
+                     <h1>SPRINT 2</h1>
+                     <h1>Compile Ideas and produce Low-Fidelity Wireframes</h1>
+                     <div class="imgText">
+                     <p class = "textOver">Ideas flourished as we began to set the basic outline of the Mobile OS. Adobe CC was used to create wireframes(Illustrator, Photoshop, Muse).</p>  
+                     <img src="../img//loop/sprint1.png" alt="Whiteboard and Post-Its" class="decervoImg">  
+                       </div>
+                     <h1>SPRINT 3</h1>
+                     <h1>Core Mobile OS Apps</h1>
+                     <div class="imgText">
+                     <p class = "textOver">Contacts, Mail, Dialer, Messenger, Calendar, Camera, Photos. </p>  
+                     <img src="../img//loop/core.png" alt="uHIT Mobile Flowchart" class="decervoImg">
+                      </div>
+                     <h1>SPRINT 4</h1>
+                     <h1>Secondary Mobile OS Apps</h1>
+                     <div class="imgText">
+                     <p class = "textOver">Music, Navigation, Notes, Wallet, Health, Browser, Clock, Weather, Calculator.</p>
+                     <img src="../img//loop/secondary.png" alt="HTML Snip" class="decervoImg">
+                      </div>
+                     <h1>SPRINT 5</h1>
+                     <h1>Finalization of the Mobile OS</h1>   
+<iframe src="https://drive.google.com/file/d/0BwZrUtGyvIaDMjdtUFkta2RENHc/preview" width="100%" height="80%"></iframe>
+<div class="blank"></div>
  </div>
   </div>
          <!--<script src="./assets/js/vendor.min.js?v=1.8"></script>
