--- a/stockUp.html
+++ b/stockUp.html
@@ -56,7 +56,7 @@
                      <img src="../img//StockUp/disaster.jpg" alt="Disaster" class="decervoImg">  
                      <h1> In-Person Surveys</h1>
                      <p>In-person surveys conducted with various demographics of individuals geared our solution to their personal needs, expectations, and accessibility concerns.</p>
-                     <img src="../img//website/design.png" alt="Desgn Options" class="decervoImg">  
+                     <img src="../img//StockUp/interview.jpg" alt="Interview" class="decervoImg">  
                      <h1>Prototyping</h1>
                      <p>Started with simple paper prototypes, user-tested and iterated upon to eventual designing of the user interface and compiling user-flows.  These wireframes 
                          done in Figma(collaboration based barebones, cloud illustrator) and eventually moved to InVision for a Low-Fidelity HotSpot prototype.  These were presented on mobile devices and features were
