--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="projectItem">
 					<img src="../img/decervoWebsite2.PNG" alt="decervoWebsite" class="decervoWeb">
 					<h1 class = "projectTitle websiteTitle">deCervo LLC.</h1>
-					<a class = "moreBtn websiteBtn" href="#">MORE</a>
+					<a class = "moreBtn websiteBtn" href="decervo.html">MORE</a>
                    
 				</div>
 				<div class="projectItem">
@@ -102,17 +102,17 @@
 				<div class="projectItem">
 					<img src="../img/stockUp.PNG" alt="stockUp" class="stockUp">
 					<h1 class = "projectTitle stockTitle">STOCK UP</h1>
-					<a class = "moreBtn stockBtn" href="#">MORE</a>
+					<a class = "moreBtn stockBtn" href="stockUP.html">MORE</a>
 				</div>
 				<div class="projectItem">
 					<img src="../img/loop.PNG" alt="loopOS" class="loop">
 					<h1 class = "projectTitle loopTitle"></h1>
-					<a class = "moreBtn loopBtn" href="#">MORE</a>
+					<a class = "moreBtn loopBtn" href="loopOS.html">MORE</a>
 				</div>
 				<div class="projectItem">
 					<img src="../img/info.svg" alt="infographic" class="info">
 					<h1 class = "projectTitle infoTitle">INFOGRAPHIC</h1>
-					<a class = "moreBtn infoBtn" href="#">MORE</a>
+					<a class = "moreBtn infoBtn" href="http://jordanfreitas4.wixsite.com/infovis-2015" target="_blank">MORE</a>
 				</div>
 				<div class="projectItem">
 					<img src="../img/chowbox.svg" alt="ChowBox" class="chow">
