--- a/loopOS.html
+++ b/loopOS.html
@@ -45,9 +45,9 @@
                 <div class="container">
                     <div class="loopText">
                          <h1 class = "loopIntro" >3Months. 3People. 1Goal.</h1>
-                         <h1 class = "loopIntro" >Design a Mobile Operating System</h1>
-
-                    <h1>SPRINT 1</h1>
+                         <h1  >Design a Mobile Operating System</h1>
+                         </div>
+                    <h1 class="loopTitle">SPRINT 1</h1>
                     <h1>Themes. Values. Surveys. Interviews.</h1>
                     
                     <div class="imgText">
@@ -56,25 +56,25 @@
                      </img> 
                      </div>
 
-                     <h1>SPRINT 2</h1>
+                     <h1 class="loopTitle">SPRINT 2</h1>
                      <h1>Compile Ideas and produce Low-Fidelity Wireframes</h1>
                      <div class="imgText">
-                     <p class = "textOver">Ideas flourished as we began to set the basic outline of the Mobile OS. Adobe CC was used to create wireframes(Illustrator, Photoshop, Muse).</p>  
+                     <p class = "textOver">Ideas flourished as we began to set the basic outline of the Mobile OS.</p>  
                      <img src="../img//loop/sprint1.png" alt="Whiteboard and Post-Its" class="decervoImg">  
                        </div>
-                     <h1>SPRINT 3</h1>
+                     <h1 class="loopTitle">SPRINT 3</h1>
                      <h1>Core Mobile OS Apps</h1>
                      <div class="imgText">
                      <p class = "textOver">Contacts, Mail, Dialer, Messenger, Calendar, Camera, Photos. </p>  
                      <img src="../img//loop/core.png" alt="uHIT Mobile Flowchart" class="decervoImg">
                       </div>
-                     <h1>SPRINT 4</h1>
+                     <h1 class="loopTitle">SPRINT 4</h1>
                      <h1>Secondary Mobile OS Apps</h1>
                      <div class="imgText">
                      <p class = "textOver">Music, Navigation, Notes, Wallet, Health, Browser, Clock, Weather, Calculator.</p>
                      <img src="../img//loop/secondary.png" alt="HTML Snip" class="decervoImg">
                       </div>
-                     <h1>SPRINT 5</h1>
+                     <h1 class="loopTitle">SPRINT 5</h1>
                      <h1>Finalization of the Mobile OS</h1>   
 <iframe src="https://drive.google.com/file/d/0BwZrUtGyvIaDMjdtUFkta2RENHc/preview" width="100%" height="80%"></iframe>
 <div class="blank"></div>
